# not-a-hat

./: .gitignore  Makefile  README.md  __init__.py  lex.py  main.py  pyproject.toml  syntax.py
output/: symbol_table1.txt  symbol_table2.txt
resources/: grammar.txt  ll1.txt  test1.c
src/: __init__.py  data.py  exceptions.py  lex.py  lexer.py  main.py  parser.py  reader.py  scope.py  symbol_table.py  syntax.py  table.py  token_list.py  tree.py  typecheck.py  utils.py  writer.py
src/io/: reader.py  writer.py
src/lexical/: formal_defs.py  token_constants.py
src/structures/: fa.py
test-code/: hello_world.c  program1.c  program1.lua  program3.c  program4.c  test3.c
test-code/semantic-analysis/: invalid-break-operator.c  invalid-operations.c  invalid-variable-declaration.c  valid-break-operator.c  valid-operations.c  valid-variable-declaration.c
test_code_template/: fib.c  hello_world.c  test1.c  test2.c
