[tool.poetry]
name = "not-a-hat"
version = "0.0.1"
description = ""
authors = ["Vitor Della <vitor.origamer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
ply = "^3.11"
tabulate = "^0.8.9"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
