[tool.poetry]
name = "not-a-hat"
version = "0.1.0"
description = ""
authors = ["vdella <vitor.origamer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ply = "^3.11"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
